k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tasklistapi
  labels:
    app: tasklist-api
