k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasklist-api-service
  namespace: tasklistapi
spec:
  selector:
    app: tasklist-api
  ports:
  - name: http
    port: 80
    targetPort: 8081
  type: LoadBalancer
