k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasklist-api-ingress
  namespace: tasklistapi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: tasklist.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tasklist-api-service
            port:
              number: 80
